--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@ngrx/effects": "^7.4.0",
     "@ngrx/store": "^7.4.0",
     "@ngrx/store-devtools": "^7.4.0",
+    "pubnub": "^4.24.1",
+    "pubnub-angular2": "^1.3.2",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
