--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ngrx/store-devtools": "^7.4.0",
     "pubnub": "^4.24.1",
     "pubnub-angular2": "^1.3.2",
+    "immer": "^3.1.3",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
