--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ngrx/effects": "^7.4.0",
     "@ngrx/store": "^7.4.0",
     "@ngrx/store-devtools": "^7.4.0",
+    "@swimlane/ngx-charts": "^11.2.0",
     "pubnub": "^4.24.1",
     "pubnub-angular2": "^1.3.2",
     "immer": "^3.1.3",
